# redfin_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  MIGRATION_GUIDE.md  Makefile  README.docs.md  README.md  README_ui.md  TEST_REPORT.md  datas  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.py  run_app.py  sample.json  setip_fastapi_portproxy.ps1
.github/workflows/: docker-multi-build.yml
app/: __init__.py  main.py
app/api/: __init__.py  articles.py  deps.py  news.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  articles.py  news.py
app/core/: __init__.py  config.py  container.py  database.py  exceptions.py
app/models/: __init__.py  article.py
app/repositories/: __init__.py  article_repository.py  base.py  news_repository.py
app/schemas/: __init__.py  article.py  news.py
app/services/: __init__.py  article_service.py  news_service.py
app/utils/: __init__.py  data_loader.py
backup_old_structure/src/redfin_api/: config.py  main.py
docs/: README.md  api.md  build.md  migration.md  test-report.md
scripts/: TEST_PLAN.md  build.sh  deploy.sh  example_usage.py  migrate_to_new_structure.py  start.ps1  start.sh
src/redfin_api/: __init__.py  ai_news.jsonl  app.py  config.py  load_data.py  main.py  models.py
tests/: conftest.py  test_api.py  test_config.py  test_fetch_all_articles.py  test_integration.py  test_load_data.py  test_models.py  test_utils.py
